--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 Brotli==1.1.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
