--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
+boto3==1.33.13
+botocore==1.33.13
 Brotli==1.1.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -10,21 +12,25 @@ django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.9
 django-cors-headers==4.1.0
 django-session-timeout==0.1.0
+django-storages==1.14.4
 djangorestframework==3.15.1
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 importlib-metadata==6.7.0
+jmespath==1.0.1
 packaging==24.0
 Pillow==9.5.0
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.2
 requests==2.31.0
+s3transfer==0.8.2
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
-urllib3==2.0.7
+urllib3==1.26.20
 uvicorn==0.22.0
 whitenoise==6.5.0
 zipp==3.15.0
