--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 boto3==1.33.13
 botocore==1.33.13
 Brotli==1.1.0
