--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,4 @@
+PYTHON_VERSION=
 SECRET_KEY=
 DEBUG=
 
@@ -7,3 +8,14 @@ EMAIL_PORT=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=
+
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+
+DATABASE_URL=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
