--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
 boto3==1.33.13
 botocore==1.33.13
 Brotli==1.1.0
@@ -24,6 +24,7 @@ Pillow==9.5.0
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==0.21.1
 pytz==2024.2
 requests==2.31.0
 s3transfer==0.8.2
